<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="artist_icon">Artist icon</string>
    <string name="tekst">Tekst</string>
    <string name="name">Name</string>
    <string name="listeners">Listeners</string>
    <string name="play_count">Play count</string>
    <string name="artist">Artist</string>
    <string name="url">URL</string>
    <string name="upis">Upis</string>
    <string name="search">Search</string>
    <string name="tag">Tag</string>
    <string name="top_artists">Top Artists</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="search_artists">Search Artists</string>
</resources>