<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="413dp"
        android:layout_height="155dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="132dp"
                android:text="@string/tekst"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.914" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:text="@string/artist"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.915" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="132dp"
                android:text="@string/tekst"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.661" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="132dp"
                android:text="@string/tekst"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:text="@string/play_count"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.661" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:text="@string/listeners"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:text="@string/name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.122" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="95dp"
                android:layout_height="96dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/artist_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="116dp"
                android:layout_height="32dp"
                android:layout_marginStart="132dp"
                android:text="@string/tekst"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.118" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>