<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="artis" type="com.example.myapplication.Artist" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SearchArtistsFragment1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="455dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:text="@string/top_tracks"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/tag"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="132dp"
                android:layout_marginTop="16dp"
                android:text="@{artis.name}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="154dp"
                android:layout_height="51dp"
                android:layout_marginEnd="124dp"
                android:layout_marginBottom="60dp"
                android:text="@{artis.urlv}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="84dp"
                android:text="@string/play_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="72dp"
                android:text="@string/url"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="132dp"
                android:layout_marginTop="84dp"
                android:text="@{artis.playcount}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="52dp"
                android:text="@string/listeners"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="132dp"
                android:layout_marginBottom="32dp"
                android:text="@{artis.tag}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="132dp"
                android:layout_marginTop="52dp"
                android:text="@{artis.listeners}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="95dp"
                android:layout_height="96dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/artist_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="276dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="82dp"
                tools:layout_editor_absoluteY="66dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>