<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="artist" type="com.example.myapplication.Artist" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:visibility="visible"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="80dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="88dp"
                    android:text="@{artist.listeners}"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.975" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="67dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/listeners"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.975" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="177dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="88dp"
                    android:text="@{artist.urlv}"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.588" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="31dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/url"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.427" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="81dp"
                    android:layout_height="74dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/artist_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="176dp"
                    android:layout_height="39dp"
                    android:layout_marginStart="88dp"
                    android:text="@{artist.name}"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.103" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="45dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.095" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>