<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="artist" type="com.example.myapplication.Artist" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:visibility="visible"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="80dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="104dp"
                    android:text="@{artist.playcount}"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.928" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="80dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="104dp"
                    android:text="@{artist.listeners}"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.663" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="67dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/play_count"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.935" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="67dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/listeners"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.671" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="45dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.122" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="72dp"
                    android:layout_height="73dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/artist_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="176dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="104dp"
                    android:text="@{artist.name}"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.141" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>